Fix scrollbar appearing unnecessarily on certain screen widths

--- a/src/content/assets/css/plain.css
+++ b/src/content/assets/css/plain.css
@@ -24,7 +24,8 @@ body > main
   flex-direction: column;
   flex: 1 0 auto;
   width: 80%;
-  min-width: 48rem;
+  /* Account for scrollbars, which are usually 16 pixels wide */
+  min-width: calc(48rem - 16px);
   max-width: 64rem;
   margin: 0 auto;
   box-sizing: border-box;
@@ -56,6 +57,12 @@ main, footer, #primary-header
 {
   padding-left: .5rem;
   padding-right: .5rem;
+}
+
+article
+{
+  width: 100%;
+  text-align: left;
 }
 
 h1, h2, h3, h4, h5, h6, #primary-heading
@@ -164,11 +171,6 @@ pre > code
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.post
-{
-  width: 100%;
-  text-align: left;
 }
 
 .post + .post
